--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,10 @@
 name: astroplanner
 channels:
   - conda-forge
+  - defaults
 dependencies:
-  - python>=3.10
+  - python=3.12
+  - numpy
   - astropy>=6.0
   - astroplan>=0.9
   - pyside6>=6.7
@@ -10,5 +12,5 @@ dependencies:
   - matplotlib>=3.9
   - pytz>=2024.1
   - timezonefinder>=6.4
-  - ephem >= 4.1.5
-  - astroquery >= 0.4.10
+  - ephem>=4.1.5
+  - astroquery>=0.4.10
